--- a/index.css
+++ b/index.css
@@ -27,3 +27,9 @@ input, button, select, label {
     padding: 0.5em;
     border-radius: 0.5em;
 }
+
+table, th, td {
+    border: 1px solid grey;
+    border-radius: 0.3em;
+    padding: 0.3em;
+}
